[package]
name = "market_square"
version = "0.2.1-alpha.1"
edition = "2024"
description = "A lock-free mpmc \"square\""
homepage = "https://github.com/Bill13579/market_square"
repository = "https://github.com/Bill13579/market_square"
documentation = "https://docs.rs/market_square"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["mpmc", "broadcast", "lock-free", "no_std", "no_alloc"]
categories = ["algorithms", "concurrency", "data-structures"]

[features]
default = ["std"]           # std is enabled by default
std = ["dep:rand"]          # marker feature for std
alloc = []                  # marker feature for alloc
small-gen = []              # marker feature for using 32-bit atomics
no-cache-pad = []        # marker feature for not padding the cache line; reduces performance but saves memory

[dependencies]
rand = { version = "0.9", optional = true, default-features = false, features = ["thread_rng"] }

[dev-dependencies]
crossbeam-channel = "0.5"
